--- a/style.css
+++ b/style.css
@@ -517,6 +517,18 @@ section {
     font-size: 0.85rem;
 }
 
+.privacy-link {
+    color: #4285f4;
+    text-decoration: none;
+    margin-left: 10px;
+    transition: color 0.3s;
+}
+
+.privacy-link:hover {
+    color: #3367d6;
+    text-decoration: underline;
+}
+
 /* Loader */
 .loader {
     position: fixed;
